Fixed ScrollBar "bug"

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -27,7 +27,7 @@ button {
 .mainPaper {
   text-align: center;
   background-color: #1f1f1f;
-  height: 100vh;
+  height: 94vh;
   border: solid #1f1f1f;
 }
 
